# web-crawler-system

./: .gitignore  Cargo.toml  NOTES.md  README.md  crawl.toml  real-world-urls.sh
scripts/: monitor-chrome.sh
scripts/postgres/: infer-json-schema-genson.zsh  sample-jsonb.zsh
web-bot/: Cargo.toml  README.md  install.sh  run.sh
web-bot/profiles/: crawl.aggressive.toml  crawl.batch.toml  crawl.cache-warm.toml  crawl.debug.toml  crawl.low-resource.toml  crawl.ndjson-output.toml  crawl.quick.toml
web-bot/profiles/examples/: crawl.aggressive.toml  crawl.deep.toml  crawl.no-cache.toml
web-bot/src/: main.rs
web-bot/src/commands/: cache.rs  crawl.rs  db.rs  mod.rs
web-bot/src/commands/cache/: common.rs  list.rs  lookup.rs  mutate.rs  snapshot.rs  stats.rs  tags.rs
web-bot/src/commands/crawl/: args.rs  common.rs  settings.rs  utils.rs
web-browser-driver/: Cargo.toml
web-browser-driver/src/: config.rs  driver.rs  error.rs  health.rs  lib.rs  open.rs  page.rs  profile.rs  resolution.rs  session.rs  telemetry.rs
web-browser-driver/src/extract/: anchors.rs  mod.rs  page_info.rs
web-browser-driver/src/wait/: condition.rs  mod.rs  presets.rs
web-crawler-db/: Cargo.toml
web-crawler-db/src/: error.rs  key.rs  lib.rs  migrate.rs  model.rs  postgres.rs  queries.rs  tags.rs  time.rs
web-crawler-db/src/sql/: schema.sql
web-crawler-engine-v3/: Cargo.toml
web-crawler-engine-v3/src/: config.rs  engine.rs  error.rs  frontier.rs  input.rs  lib.rs  output.rs  policy.rs  scheduler.rs  sessions.rs  state.rs  store.rs  url.rs  url_score.rs
web-crawler-engine-v3/src/cache/: artifact.rs  codec.rs  error.rs  fs.rs  key.rs  mod.rs  policy.rs
web-crawler-engine-v3/src/engine/: cache_replay.rs  coordinator.rs  live_page.rs  worker.rs
web-crawler-engine-v3/src/sqlite_cache/: cache.rs  error.rs  key.rs  mod.rs  model.rs  tags.rs  time.rs
