[package]
name = "web-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
url = "2"
anyhow = "1"
walkdir = "2.5.0"

web-crawler-engine-v3 = { path = "../web-crawler-engine-v3" }
web-browser-driver = { path = "../web-browser-driver" }
