[package]
name = "web-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
url = "2"
anyhow = "1"
walkdir = "2.5.0"
colored = "3.0.0"
colored_json = "5.0.0"

web-crawler-engine-v3 = { path = "../web-crawler-engine-v3" }
web-browser-driver = { path = "../web-browser-driver" }
web-crawler-db = { path = "../web-crawler-db" }

sqlx = { workspace = true}