[package]
name = "web-browser-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
futures = "0.3"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
async-trait = "0.1.88"
thiserror = "2"
tracing = "0.1"
tempfile = "3.22.0"
schemars = { version = "1.2.1", features = ["derive", "indexmap2"] }
url = { version = "2", features = ["serde"] }
colored = "3.0.0"
colored_json = "5.0.0"

chromiumoxide = { workspace = true } # LATEST FROM GIT REPO on 'main'

