[package]
name = "web-crawler-db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "json",
    "chrono",
    "tls-rustls",   # or "tls-native-tls" depending on preference
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros"] }  # for tests/examples if needed

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "migrate"] }

