[package]
name = "web-crawler-engine-v3"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bincode = { version = "2", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.45.1", features = ["fs", "time", "sync"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
colored = "3.0.0"
colored_json = "5.0.0"
indexmap = { version = "2.10.0", features = ['serde']}
futures = "0.3"
chrono = "0.4.45"

sqlx = { workspace = true}

web-browser-driver = { path = "../web-browser-driver" }

web-crawler-db = { path = "../web-crawler-db" }
